# tsf-exp

./: .gitignore  .gitmodules  Cargo.toml  TSF_ENGINE_DOCUMENTATION.md  ajemi-log.txt  build.rs  debug.yml
res/: conf.toml
src/: conf.rs  extend.rs  global.rs  lib.rs  logger.rs  register.rs
src/engine/: long_glyph.rs  mod.rs  schema.rs  sentence.rs
src/tsf/: composition.rs  display_attribute_provider.rs  edit_session.rs  key_event_sink.rs  keycode.rs  langbar_item.rs  mod.rs  text_input_processor.rs  thread_mgr_event_sink.rs
src/ui/: candidate_list.rs
