[package]
name = "openbangla"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
fern = "0.6"
chrono = "0.4"
winreg = "0.52"
parking_lot = "0.12"
thiserror = "2.0.12"
log-derive = "0.4.1"
riti = { path = "riti" }

[dependencies.windows]
version = "0.54.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_TextServices",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Foundation_Numerics",
]

[build-dependencies]
winres = "0.1"

[lib]
crate-type = ["cdylib"]
